--- a/collection/TuzinFM-(nie)rasstralianaja-paezija/index.html
+++ b/collection/TuzinFM-(nie)rasstralianaja-paezija/index.html
@@ -65,9 +65,9 @@
 
     <footer>
       <div class="top-scroller"><span></span></div>
-      <!-- <div>
+      <div>
         <a href="https://info.flagcounter.com/SO9r"><img src="https://s11.flagcounter.com/count2/SO9r/bg_FFFFFF/txt_000000/border_CCCCCC/columns_2/maxflags_10/viewers_0/labels_0/pageviews_0/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
-      </div> -->
+      </div>
       <audio id="bk-audio" src="/audio/Kaciaryna_Vadanosava-Asypaje_cherven_bely_sad.mp3" autoplay loop></audio>
     </footer>
 
